--- a/templates/analysis/drug_resistance_report.html
+++ b/templates/analysis/drug_resistance_report.html
@@ -31,9 +31,10 @@
     <div class="container" style="overflow-x:auto;">
     
     <div class="p-3" align="center">
-        <img src="{% static 'base/mrc.png' %}" height="100px" width="50%">
+        <img src="{% static 'base/uvri.png' %}" height="180px" width="70%">
+        <!-- <img src="{% static 'base/mrc-1.png' %}" height="100px" width="50%"> -->
     </div>
-
+ 
     <div class="p-3 rounded">
         <div class="p-3 mb-2 bg-info text-white" align="center"><h2>HIV Drug Resistance Report</h2></div>  
     </div>
