Update header image on DR image

--- a/templates/analysis/drug_resistance_report.html
+++ b/templates/analysis/drug_resistance_report.html
@@ -31,7 +31,7 @@
     <div class="container" style="overflow-x:auto;">
     
     <div class="p-3" align="center">
-        <img src="{% static 'base/uvri.png' %}" height="180px" width="70%">
+        <img src="{% static 'base/dr-report-header.png' %}" height="180px" width="70%">
         <!-- <img src="{% static 'base/mrc-1.png' %}" height="100px" width="50%"> -->
     </div>
  
